--- a/PyOhio_2019/Pipfile
+++ b/PyOhio_2019/Pipfile
@@ -4,10 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-cmd2 = {editable = true,path = "../../cmd2"}
+cmd2 = {editable = true,path = "../../../cmd2"}
 gnureadline = {version = "*",sys_platform = "== 'darwin'"}
 ipython = "*"
 pyreadline = {version = "*",sys_platform = "== 'win32'"}
 
 [dev-packages]
 flake8 = "*"
+pylint = "*"
