Minor cleanup to basic.py

--- a/PyOhio_2019/Pipfile
+++ b/PyOhio_2019/Pipfile
@@ -10,5 +10,5 @@ ipython = "*"
 pyreadline = {version = "*",sys_platform = "== 'win32'"}
 
 [dev-packages]
+autopep8 = "*"
 flake8 = "*"
-pylint = "*"
