--- a/PyOhio_2019/Pipfile
+++ b/PyOhio_2019/Pipfile
@@ -8,7 +8,9 @@ cmd2 = {editable = true,path = "../../../cmd2"}
 gnureadline = {version = "*",sys_platform = "== 'darwin'"}
 ipython = "*"
 pyreadline = {version = "*",sys_platform = "== 'win32'"}
+tableformatter = "*"
 
 [dev-packages]
 autopep8 = "*"
 flake8 = "*"
+
