--- a/PyOhio_2019/Pipfile
+++ b/PyOhio_2019/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-cmd2 = {editable = true,path = "../../../cmd2"}
+cmd2 = "==0.9.15"
 gnureadline = {version = "*",sys_platform = "== 'darwin'"}
 ipython = "*"
 pyreadline = {version = "*",sys_platform = "== 'win32'"}
